fix pages visibility

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,7 +45,7 @@
     background-image: url('./../../images/bg.jpg'); 
     background-repeat: no-repeat;
     background-size: cover;
-    height:100%;
+    height:100vh;
   }
 
   .pages{
